Fix mobile view issues
Correct duplicated text and remove unwanted scrollbar on mobile view.

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
 }
 
@@ -35,4 +35,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+/* Fixing mobile scrollbar */
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
